<resources>
    <string name="app_name">Mad Expenses</string>
    <string name="title_expense_detail">Expense Detail</string>
    <string name="title_expense_list">Expenses List</string>
    <string name="action_search">Search</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="balance">Balance</string>
    <string name="tag">Tag</string>
    <string name="tag_new_expense">Tag *</string>
    <string name="cost">Cost</string>
    <string name="policy">Policy</string>
    <string name="description">Description</string>
    <string name="type_description_here">Short description about the expense</string>
    <string name="bill">Bill</string>
    <string name="statistics">Statistics</string>
    <string name="currency">Currency</string>
    <string-array name="tags">
        <item name="select_tag">Select Tag</item>
        <item name="water_bill">Water_Bill</item>
        <item name="light_bill">Light_Bill</item>
        <item name="gas_bill">Gas_Bill</item>
        <item name="flight">Flight</item>
        <item name="fuel">Fuel</item>
        <item name="drinks">Drink</item>
        <item name="food">Food</item>
        <item name="hotel">Hotel</item>
        <item name="other">Other</item>
    </string-array>
    <string-array name="tagsForGraph">
        <item name="select_tag">Select Tag</item>
        <item name="all_tags">All Tags</item>
        <item name="water_bill">Water_Bill</item>
        <item name="light_bill">Light_Bill</item>
        <item name="gas_bill">Gas_Bill</item>
        <item name="flight">Flight</item>
        <item name="fuel">Fuel</item>
        <item name="drinks">Drink</item>
        <item name="food">Food</item>
        <item name="hotel">Hotel</item>
        <item name="other">Other</item>
    </string-array>
    <string-array name="policies">
        <item name="equal">Equal Parts</item>
        <item name="exclude">Exclude Member</item>
        <item name="custom_policy">Custom</item>
    </string-array>
    <string-array name="years">
        <item name="select_year">Select Year</item>
        <item name="all_years">All Years</item>
        <item name="2017">2017</item>
        <item name="2018">2018</item>
        <item name="2019">2019</item>
        <item name="2020">2020</item>
    </string-array>
    <string name="who">Who pay?</string>
    <string name="how">How much?</string>
    <string name="partition">Partition</string>
    <string name="hint_title">Expense Name *</string>
    <string name="hint_email">name.surname@gmail.com</string>
    <string name="hint_amount">Amount *</string>
    <string name="hint_paidBy">Paid By</string>
    <string name="hint_date">Date</string>
    <string name="hint_description">Description</string>
    <string name="err_msg_title">Enter the expense name</string>
    <string name="err_msg_amount">Enter the amount</string>
    <string name="err_msg_correct_amount">Enter a correct amount</string>
    <string name="err_msg_tag">Enter the expense tag</string>
    <string name="hint_phonenumber">Enter your phone number</string>
    <string name="hint_password">Enter your password</string>
    <string name="hint_password_confirm">Confirm your password</string>
    <string name="action_sign_in_short">Register</string>
    <string name="hint_confirmation_code">Enter the code that you have received</string>
    <string name="confirm_code">Confirm Code</string>
    <string name="signup">Signup</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="registration">Sign Up for Mad Expenses</string>
    <string name="disconnect">Disconnect</string>
    <string name="sign_out">Sign out</string>
    <string name="mad_title_text">Mad Expense Sign In</string>
    <string name="signed_out">Signed Out</string>
    <string name="desc_firebase_lockup">App logo and name</string>
    <string name="login">Login with Google</string>
    <string name="confirm">Confirm</string>
    <string name="group_name">Group Name</string>
    <string name="sign_in">Sign in</string>
    <string name="members">members</string>
    <string name="new_group">New Group</string>
    <string name="my_expenses">My Expenses</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="share">Share</string>
    <string name="send">Send</string>
    <string name="photo">Take Photo</string>
    <string name="gallery">Choose from Gallery</string>
    <string name="cancel">Cancel</string>
    <string name="add_proof">Add Expense Proof</string>
    <string name="me">Me</string>
    <string name="you">You</string>
    <string name="reset">Reset</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="hint_paidby">Paid by</string>
    <string name="hint_invitation">Invitation code (optional)</string>
    <string name="err_msg_telephone">Invalid telephone number</string>
    <string name="err_msg_invitation">Invalid invitation code</string>
    <string name="err_msg_prefix_number">Insert number without prefix</string>
    <string name="err_msg_prefix">Invalid prefix</string>
    <string name="hint_prefix">prefix</string>
    <string-array name="countries_prefix">
        <item name="australia">Australia +61</item>
        <item name="austria">Austria +43</item>
        <item name="france">France +33</item>
        <item name="germany">Germany +49</item>
        <item name="italy">Italy +39</item>
        <item name="UK">UK +44</item>
        <item name="USA">USA +1</item>
    </string-array>
    <string name="at_least_one_member">Please, select at least one member!</string>
    <string name="select_members">Select Group Members</string>
    <string name="group_members">Group Members</string>
    <string name="invalid_group_name">Please, insert a valid group name!</string>
    <string name="dialog_single_invite_request">should be invited to join the Application in order to be added to a group.</string>
    <string name="dialog_multiple_invite_request">should be invited to join the Application in order to be added to a group.</string>
    <string name="invite_members">Do you want to invite new members?</string>
    <string name="and">and</string>
    <string name="yes">yes</string>
    <string name="signin_as">Sign in as:</string>
    <string name="no">no</string>
    <string name="sure">Are you sure?</string>
    <string name="fail_load_group">Failed to load groups.</string>
    <string name="compile_all_fields">Please, compile all fields.</string>
    <string name="choose_email_client">Choose an Email client:</string>
    <string name="no_contacts_in_list">No contacts in your contact list.</string>
    <string name="group_settings">Group Info</string>
    <string name="debt_credits">My debts/credits</string>
    <string name="group_members_to_group">Members Balance</string>
    <string name="next">Next</string>
    <string name="invite_new_members">Invite New Members</string>
    <string name="name_surname">Name Surname</string>
    <string name="phone_number">Phone Number</string>
    <string name="paid_topay">Paid/toPay</string>
    <string name="type">Type</string>
    <string name="currencyISO">Currency ISO</string>
    <string name="date_format">dd/mm/yyyy</string>
    <string name="date">Date</string>
    <string name="paid_by">Paid by</string>
    <string name="user">User</string>
    <string name="add_photo">Add Photo</string>
    <string name="uploading">Uploading</string>
    <string name="upload_pause">Upload is paused</string>
    <string name="file_uploaded">File Uploaded</string>
    <string name="coming_soon">Coming soon…!</string>
    <string name="my_balance">BALANCE</string>
    <string name="expenses">EXPENSES</string>
    <string name="chat">CHAT</string>
    <string name="read_failed">The read failed:</string>
    <string name="add_new_expense">Add New Expense</string>
    <string name="loading">Loading</string>
    <string name="title_activity_group_history">GroupHistory</string>
    <string name="no_reports">No available reports</string>
    <string name="group_history">Group Story</string>
    <string name="history_new_group">has created this group.</string>
    <string name="history_transfer_part1">has canceled the </string>
    <string name="history_transfer_part2">expense.</string>
    <string name="history_expense">has added e new expense. Cost :</string>
    <string name="history_expense_part1">has added the expense</string>
    <string name="history_expense_part2">. Cost : </string>
    <string name="history_payment_part1">has paid to</string>
    <string name="history_payment_part2">. Cost :</string>
    <string name="history_new_memeber">has joined the group.</string>
    <string name="history_contest_expense">has contested the expense</string>
    <string name="history_cancellation_contest">has delted the contest of expense</string>
    <string name="no_detail">No detail available</string>
    <string name="pay_button">Pay</string>
    <string name="list_payment">Settle Up</string>
    <string name="pay_everyone">Pay everyone</string>
    <string name="confirm_inserted">Confirm inserted</string>
    <string name="group">Group</string>
    <string name="all_groups">All Groups</string>
    <string name="year">Year</string>
    <string name="select_group">Select Group</string>
    <string name="select_year">Select Year</string>
    <string name="show_graph">SHOW</string>
    <string name="months">Months</string>
    <string name="go_to_list_of_payments">Go to List of Payments</string>
    <string name="payments_detail">Payments Detail</string>
    <string name="expenses_in">Expenses in</string>
    <string name="chat_hint">Write a message</string>
    <string name="rounded_cost">Rounded Cost</string>
    <string name="zero">0.00</string>
    <string name="no_expenses">No expenses in</string>
    <string name="in">in</string>
    <string name="no_expenses_in">No expenses in</string>
    <string name="all_years">All Years</string>
    <string name="member">member</string>
    <string name="user_info">My Profile</string>
    <string name="payment_update">Payments update</string>
    <string name="payment_updated">Payments updated</string>
    <string name="add_members">Add Members</string>
    <string name="already_in">Already in the group</string>
    <string name="dialog_single_invite_to_add_request">should be invited to join the Application in order to be added to group</string>
    <string name="dialog_multiple_invite_to_add_request">should be invited to join the Application in order to be added to group</string>
    <string name="operation_failed">Operation failed</string>
    <string name="group_info">Group Info</string>
    <string name="modify_group_name">Modify Group Name</string>
    <string name="settings_title">Settings and Preferences</string>
    <string name="to_pay">To Pay</string>
    <string name="paid">Paid</string>
    <string name="new_to_pay">New Cost to Pay</string>
    <string name="new_paid">New Cost Paid</string>
    <string name="expense_cost">Expense Cost</string>
    <string name="old_paid_topay">To Pay Assign</string>
    <string name="Paid">Paid</string>
    <string name="general">General</string>
    <string name="language">Language</string>
    <string name="notifications">Notifications</string>
    <string name="ringtone">Ringtone</string>
    <string name="vibrate">Vibrate</string>
    <string name="motivation_hint">Motivation *</string>
    <string name="motivation">Motivation</string>
    <string name="select_tag">Select Tag</string>
    <string name="related_to">related to</string>
    <string name="all_tags">All Tags</string>
    <string name="contention">Generate Contention</string>
    <string name="no_expense_found">No expenses found</string>
    <string name="italy">Italy</string>
</resources>