<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/google_icon"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:contentDescription="@string/desc_firebase_lockup"
            android:src="@mipmap/ic_wallet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/mad_title_text" />

        <TextView
            android:id="@+id/status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:maxLines="1"
            android:padding="4dp"
            android:textSize="14sp"
            android:text="@string/login" />

        <LinearLayout
            android:id="@+id/fields"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            tools:visibility="visible"
            >
            <AutoCompleteTextView
                android:id="@+id/country"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:gravity="center"
                android:text="@string/italy"

                />
            <LinearLayout
                android:baselineAligned="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/prefix_layout"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/prefix"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:maxLines="1"
                    android:inputType="phone"
                    android:gravity="center"
                    android:text="+39"
                    />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/telephone_layout"
                    android:layout_width="0dp"
                    android:layout_weight="4"
                    android:layout_height="wrap_content">


                    <EditText
                        android:id="@+id/telephone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:gravity="center"
                        android:inputType="phone"
                        android:hint="@string/hint_phonenumber"
                        />

                </android.support.design.widget.TextInputLayout>




            </LinearLayout>




            <android.support.design.widget.TextInputLayout
                android:id="@+id/invitation_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/input_invitation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:gravity="center"
                    android:hint="@string/hint_invitation" />

            </android.support.design.widget.TextInputLayout>



        </LinearLayout>


    </LinearLayout>

    <RelativeLayout
        android:id="@+id/button_field"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:layout_alignParentBottom="true"
        android:visibility="gone"
        tools:visibility="visible"

        >

        <com.google.android.gms.common.SignInButton
            android:id="@+id/sign_in_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_centerInParent="true"
            android:visibility="visible"
            tools:visibility="gone" />

        <Button
            android:id="@+id/confirm_number_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_centerInParent="true"
            android:text="@string/confirm"
            android:visibility="gone"
            tools:visibility="visible"
            />

    </RelativeLayout>

</RelativeLayout>