<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="72dp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="@dimen/text_margin"
        android:layout_marginRight="16dp"
        android:id="@+id/pic"
        android:layout_centerVertical="true" />

    <LinearLayout
        android:id="@+id/info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_toRightOf="@+id/pic"
        android:layout_centerVertical="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/name"
            android:text="@string/name_surname"
            android:textSize="18dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/no"
            android:layout_marginTop="4dp"
            android:text="@string/phone_number"
            android:textSize="12dp" />

    </LinearLayout>

    <CheckBox
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:id="@+id/check"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"/>
    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/dividerColor"
        android:layout_alignParentBottom="true"/>

    <TextView
        android:id="@+id/me"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:text="@string/me"
        android:textSize="18dp"
        android:textColor="@color/colorPrimary"
        android:layout_centerVertical="true"
        android:layout_toStartOf="@+id/check" />

</RelativeLayout>