<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/expense_cost"
            android:textSize="20sp"

            />

        <TextView
            android:id="@+id/old_paid_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="55€"
            android:textStyle="bold"
            android:textSize="18sp"
            android:gravity="end"
            android:layout_margin="16dp"
            android:textAlignment="textEnd"
            />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/paid_topay"
            android:textSize="20sp"

            />

        <TextView
            android:id="@+id/old_paid_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="x/y"
            android:textStyle="bold"
            android:textSize="18sp"
            android:gravity="end"
            android:layout_margin="16dp"
            android:textAlignment="textEnd"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:id="@+id/paid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/new_to_pay"
            android:textSize="20sp"

            />

        <TextView
            android:id="@+id/new_topay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="y/tot Cost"
            android:textStyle="bold"
            android:textSize="18sp"
            android:gravity="end"
            android:layout_margin="16dp"
            android:textAlignment="textEnd"
            />
    </LinearLayout>


</LinearLayout>